<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="donut">#ecf0f1</color>
    <color name="black">#000000</color>
    <color name="gray">#808080</color>

    <item name="donut_text" type="string">@color/donut</item>
    <item name="user_id" type="integer">3</item>
 
    <string name="loading">PythonAPK running...</string>
    <string name="title">Title</string>
    
    <string name="menu_settings">Settings</string>
    <string name="foreground_service_started">Service is in the foreground</string>
    <string name="foreground_service_started_aud">Audio service is in the foreground</string>
    <string name="app_id">530721140354975</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_deviation">DeviationActivity</string>
    
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Visualize</string>
    <string name="title_section2">Badges</string>
    <string name="title_section3">Compete</string>
    <string name="title_activity_badges">BadgesActivity</string>

    <item name="score" type="id"/>
    <item name="goal" type="id"/>
    <item name="donut" type="id"/>
    <item name="recentData" type="id"/>
    <item name="setGoal" type="id"/>
    <item name="recentDataImage" type="id"/>
    <item name="goalImage" type="id"/>
    <item name="compete" type="id"/>
    <item name="competeText" type="id"/>
    <item name="competeImage" type="id"/>
    <item name="graphSelect" type="id"/>
    <item name="dateSelect" type="id"/>
    <item name="setSleepGoal" type="id"/>
    <item name="wakeupGoalTimePicker" type="id"/>
    <item name="setTimeButton" type="id"/>
    <item name="sleepGraphText" type="id"/>
    <item name="barGraphText" type="id"/>

    <string name="title_activity_startup">StartupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_activity_pick_goal">GoalPickActivity</string>
    <string name="title_activity_day_data">DayDataActivity</string>
    <string name="fill_out_survey">Please complete this short survey so we can provide better suggestions for you!</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="survey_sleeptime">What time do you typically go to bed?</string>
    <string name="survey_wakeuptime">What time do you typically wake up?</string>
    <string name="survey_coffee">How many cups of coffee do you drink on a typical day </string>
    <string name="survey_alarmclock">Do you need an alarm clock to wake you up in the morning？</string>
    <string name="hint_sleeptime">Please enter your sleep time using the format like 11:00PM</string>
    <string name="hint_wakeuptime">Please enter your wake time using the format like 8:00AM</string>
    <string name="hint_coffee">Enter the number.</string>
    <string name="alarmclock_true">Yes</string>
    <string name="alarmclock_false">No</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="TipButton">Tips</string>
    <string name="VisualizeButton">Visualize</string>
    <string name="GoalButton">Set Your Goal</string>
    <string name="BadgeButton">Badges</string>
    <string name="title_activity_tip">TipActivity</string>
    <string name="tip_today">Don’t dwell on worries and frustrations.Stress prevents sleep. Keep a note pad next to your bed to move things out of your mind onto a "to do" list.</string>
    <string name="title_activity_choose_goal_type">ChooseGoalTypeActivity</string>
    <string name="wakeUpEarlierGoalButton">Wake Up Earlier</string>
    <string name="goSleepEarlierGoalButton">Go Sleep Earlier</string>
    <string name="getMoreSleepGoalButton">Get More Sleep</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="title_activity_goal_survey">GoalSurveyActivity</string>
    <string name="Happy">Happy</string>
    <string name="Drowsy">Drowsy</string>
    <string name="Sleepy">Sleepy</string>

    <string name="app_name">Badge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="earned">Earned Badges</string>
    <string name="unearned">Unearned Badges</string>
    <string name="pilotBadge">Pilot Badge</string>
    <string name="adventurousBadge">Adventurous Badge</string>
    <string name="modernCitizenBadge">Modern Citizen Badge</string>

</resources>