<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    
    
    
    tools:context=".BadgesActivity" >

    <RelativeLayout
        android:id="@+id/earned"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:gravity="left" >

        <TextView
            android:id="@+id/earned_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/good"
            android:text="@string/earned"
            android:textSize="30sp"
            android:paddingLeft="30dp"
             />

        <RelativeLayout
            android:id="@+id/earnedBadge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/earned_text" >

            <ImageButton
                android:id="@+id/ImageButtonG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/pilot_small" />

            <TextView
                android:id="@+id/pilotBadge"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImageButtonG"
                android:text="@string/pilotBadge"
                android:textSize="15sp" 
                />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/unearned_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/okay"
        android:paddingLeft="30dp"
        android:text="@string/unearned"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/unearned"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="left" >

        <RelativeLayout
            android:id="@+id/unearnedBadge1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" >

            <ImageButton
                android:id="@+id/adventurousBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/adventurous_small" />

            <TextView
                android:id="@+id/adventurousText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adventurousBadge"
                android:text="@string/adventurousBadge"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/unearnedBadge2"
            style=""
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/unearnedBadge1" >

            <ImageButton
                android:id="@+id/ModernCitizen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/model_citizen_small" />

            <TextView
                android:id="@+id/ModernCitizenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ModernCitizen"
                android:text="@string/modernCitizenBadge"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>